[workspace]
members = [
  "remote",
  "mock_cl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", rev="d599393771f9d7d137ea4abf271e1bd118184c73", version = "1.0.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev="d599393771f9d7d137ea4abf271e1bd118184c73", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev="d599393771f9d7d137ea4abf271e1bd118184c73" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev="d599393771f9d7d137ea4abf271e1bd118184c73" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev="d599393771f9d7d137ea4abf271e1bd118184c73" }
alloy = { version = "0.1.4", features = ["full","node-bindings"] }
alloy-signer-local = { version = "0.1.4", features = ["keystore"] }
futures-util = "0.3"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
serde_with = "3.3.0"
thiserror = "1.0"
thiserror-no-std = { version = "2.0.2", default-features = false }
alloy-rpc-types-beacon = { version = "0.1", default-features = false }
warp = "0.3"

# misc
eyre = "0.6"

# async
tokio = { version = "1.0", features = ["full"] }

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
