[workspace]
members = [
  "mock_cl",
  "libp2p",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
alloy = { version = "0.2.0", features = ["full","node-bindings"] }
alloy-signer-local = { version = "0.2.0", features = ["keystore"] }
futures-util = "0.3"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
serde_with = "3.3.0"
thiserror = "1.0"
thiserror-no-std = { version = "2.0.2", default-features = false }
alloy-rpc-types-beacon = { version = "0.2.0", default-features = false }
warp = "0.3"
revm-primitives = "7.1.0"
revm-precompile = "9.2.0"
# misc
futures = "0.3"
eyre = "0.6"

# async
tokio = { version = "1.0", features = ["full"] }
