[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-poseidon2 = "0.1.3-succinct"
ark-bn254 = "0.4"     # For BN254 field types from Arkworks
ark-ff = "0.4"        # Finite field arithmetic library from Arkworks      
ark-std = "0.4"       # Arkworks utilities
zkhash = { git =  "https://github.com/HorizenLabs/poseidon2", branch = "main" }
lazy_static = { version = "1.4" }
num-bigint = { version = "0.4" }
alloy = { version = "0.1.4", features = ["full"] }
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.12"
merkletree = "0.23.0"
typenum = "1.17.0"
reed-solomon-erasure = "6.0.0"
secret_sharing_and_dkg = "0.12.0"
ark-bls12-381 = "0.4.0"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-poly-commit = "0.4.0"

