[package]
name = "reth-exex-libp2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reth.workspace = true
reth-exex = { workspace = true }
reth-node-api = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-tracing = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
libp2p = { version = "0.53.2", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "mdns", "ping","kad"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
libp2p-swarm-derive = "0.34.2"
[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }