[package]
name = "mock_cl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
alloy.workspace = true
eyre.workspace = true

futures-util.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true

warp.workspace = true
alloy-rpc-types-beacon.workspace = true


tonic = "0.12"
prost = "0.13"
tokio.workspace = true
tokio-stream = "0.1"
alloy-eips = "0.2.0"

bincode = "1.3"
alloy-signer-local.workspace = true
reqwest = "0.12.5"
rand = "0.8.5"
rusqlite = "0.31.0"

[build-dependencies]
tonic-build = "0.12"


[features]
default = []
optimism = ["reth/optimism"]

[[bin]]
name = "mock-cl"
path = "bin/mock_cl.rs"

[[bin]]
name = "update_blocks"
path = "bin/update_blocks.rs"
