[package]
name = "remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true

eyre.workspace = true

futures-util.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true

warp.workspace = true
alloy.workspace = true
alloy-rpc-types-beacon.workspace = true

p3-poseidon2 = "0.1.3-succinct"
ark-bn254 = "0.4"     # For BN254 field types from Arkworks
ark-ff = "0.4"        # Finite field arithmetic library from Arkworks      
ark-std = "0.4"       # Arkworks utilities
zkhash = { git =  "https://github.com/HorizenLabs/poseidon2", branch = "main" }
lazy_static = { version = "1.4" }
num-bigint = { version = "0.4" }
merkletree = "0.23.0"
typenum = "1.17.0"
reed-solomon-erasure = "6.0.0"
secret_sharing_and_dkg = "0.12.0"
ark-bls12-381 = "0.4.0"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-poly-commit = "0.4.0"
ark-crypto-primitives = { version = "^0.4.0", features = ["r1cs","merkle_tree", "crh"] }
poseidon-merkle = "0.6.0"
alloy-eips = "0.2.0"
rand = "0.8"

tonic = "0.12"
prost = "0.13"
tokio.workspace = true
tokio-stream = "0.1"

bincode = "1.3"
reqwest = "0.12.5"
clap = "4.5.9"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reth-exex-test-utils.workspace = true

[features]
default = []
optimism = ["reth/optimism"]

[[bin]]
name = "remote-exex"
path = "bin/exex.rs"

[[bin]]
name = "storage-node"
path = "bin/s_node.rs"

[[bin]]
name = "remote-read"
path = "bin/read.rs"